k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
        - name: bookstore-container
          image: bookstore-api:3.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /books
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /books
              port: 8080
            initialDelaySeconds: 35
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
