k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  type: NodePort
  selector:
    app: bookstore
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30003
